--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,10 +1,6 @@
 [config]
 skip_core_tasks = true
 
-[tasks.dev]
-script = "cargo run"
-watch = true
-
-[tasks.dev_tests]
+[tasks.tests]
 script = "cargo test"
 watch = true
