--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,6 +1,10 @@
 [config]
 skip_core_tasks = true
 
+[tasks.dev]
+script = "cargo run"
+watch = true
+
 [tasks.tests]
 script = "cargo test"
 watch = true
